--- a/style.css
+++ b/style.css
@@ -10,3 +10,13 @@ Version: 4.9.10.1652091091
 Updated: 2022-05-09 12:11:31
 
 */
+#body {
+  background-color: #f5ebe0;
+}
+h1 {
+  color: #f5ebe0;
+}
+
+#undertekst {
+  color: #f5ebe0;
+}
