--- a/style.css
+++ b/style.css
@@ -10,12 +10,26 @@ Version: 4.9.10.1652091091
 Updated: 2022-05-09 12:11:31
 
 */
-
+a {
+  text-decoration: none;
+}
+#sec_3 {
+  margin-top: 10vh;
+}
 #body {
   background-color: #f5ebe0;
 }
 #h1 {
   color: #f5ebe0;
+  font-size: 55px;
+}
+
+#h3 {
+  font-size: 22px;
+}
+
+.text {
+  font-size: 15px;
 }
 
 #undertekst {
@@ -57,6 +71,10 @@ Updated: 2022-05-09 12:11:31
   padding: 10px;
   color: #f5ebe0;
   margin-bottom: 4vh;
+}
+
+#button:hover {
+  transform: scale(1.1);
 }
 
 @media screen and (max-width: 980px) {
