--- a/style.css
+++ b/style.css
@@ -10,6 +10,10 @@ Version: 4.9.10.1652091091
 Updated: 2022-05-09 12:11:31
 
 */
+
+#sec_1 {
+  background-size: cover;
+}
 a {
   text-decoration: none;
 }
